# Jekko

./: .gitattributes  .gitignore  .oxlintrc.json  AGENTS.md  BABYSIT_WORK.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  JANKURAI_TASKLIST.md  Justfile  LICENSE  OCAL_MISSION.md  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md  SANDBOX_WORKPLAN.md  SECURITY.md  UNLOCK_WORKPLAN.md  ZYAL_MISSION.md  ZYAL_WORKFLOW.md  agent_chat.md  (+13 more)
.github/: CODEOWNERS  (+1 more)
crates/memory-benchmark/: Cargo.toml  README.md
crates/memory-benchmark/src/: case.rs  chase_report.rs  hash.rs  json.rs  json_parser.rs  lib.rs  memory_api.rs  runner.rs  runner_generated.rs  runner_support.rs  scorer.rs
crates/memory-benchmark/src/adapters/: baseline.rs  mod.rs  (+1 more)
crates/memory-benchmark/tests/: generated_suite.rs  oracle_unit.rs  privacy_transform.rs
crates/zyalc/: Cargo.toml
crates/zyalc/src/: compile.rs  lib.rs  main.rs  profile.rs
jnoccio-fusion/: .env.jnoccio.example  .gitignore  Cargo.toml  ENCRYPTION.md  KEYS.md  README.md
jnoccio-fusion/agent/: repo-score.json  repo-score.md
jnoccio-fusion/agents/claude/: .mcp.json  CLAUDE.md
jnoccio-fusion/agents/codex/: AGENTS.md  config.toml.snippet
jnoccio-fusion/config/: models.json  models.schema.json  server.json
jnoccio-fusion/jekko/: jekko.jnoccio.jsonc
jnoccio-fusion/scripts/: install-jekko-config.sh  install-opencode-config.sh  smoke.sh
jnoccio-fusion/src/: capacity.rs  cli.rs  config.rs  failure_log.rs  fusion.rs  lib.rs  limits.rs  main.rs  mcp.rs  metrics.rs  openai.rs  providers.rs  router.rs  routing.rs  rpc_shim.rs  search.rs  state.rs  telemetry.rs
jnoccio-fusion/src/providers/: cloudflare_workers.rs  completion_common.rs  openai_compatible.rs  responses.rs  responses_body.rs
jnoccio-fusion/src/state/: state_core.rs  state_limits.rs  state_outcomes.rs  state_recording.rs  state_tests.rs  state_util.rs
jnoccio-fusion/tests/: mcp.rs  openai_contract.rs
jnoccio-fusion/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
jnoccio-fusion/web/scripts/: ux-qa.mjs
jnoccio-fusion/web/src/: dashboard-drawer.tsx  dashboard-panels.tsx  dashboard-utils.ts  dashboard-view.tsx  main.tsx  styles.css  types.ts
jnoccio-fusion/web/tests/: api-mocks.ts  dashboard.spec.ts
(+497 files in other folders)
