[package]
name = "memory_benchmark"
version = "0.1.0"
edition = "2021"
publish = false
description = "Memory benchmark: deterministic, zero-dependency harness for advanced cognitive memory systems"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "prompt_reduce"
path = "src/bin/prompt_reduce.rs"

[[bin]]
name = "dump_tasks"
path = "src/bin/dump_tasks.rs"

[[bin]]
name = "verify_determinism"
path = "src/bin/verify_determinism.rs"

[[bin]]
name = "population_report"
path = "src/bin/population_report.rs"

# Zero external dependencies. Standard library only.
# Determinism: FNV-1a (hash.rs), hand-rolled JSON (json.rs), sorted keys throughout.
[dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
