[package]
name = "zyalc"
version = "0.1.0"
edition = "2021"
publish = false
description = "Compile .zyal source files to TOML or GitHub Actions YAML (Profiles B/C)"

[lib]
name = "zyalc"
path = "src/lib.rs"

[[bin]]
name = "zyalc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
toml = { version = "0.8", features = ["preserve_order"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
